# morfocampo

./: .gitignore  CMakeLists.txt  PRIVACY_LGPD.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  ROADMAP.md  material_tutorial_morfocampo_irder.md  run.sh
.github/workflows/: ci.yml
deploy/: README_MORFONODE.md  backup_morfonode.sh  configure_mdns_alias.sh  generate_morfonode_qr.py  install_morfonode.sh  morfocampo-update.service  morfocampo-update.timer  morfocampo.service  morfonode.env.example  update_morfonode.sh
examples/: README_EXEMPLOS.md  fala_estruturada.txt  template_arvores.csv  transcricoes_exemplo.txt
include/morfocampo/: Csv.hpp  IrderImporter.hpp  Normalizer.hpp  Report.hpp  TranscriptParser.hpp  TreeRecord.hpp  Validator.hpp  VoiceCommandParser.hpp
src/: Csv.cpp  IrderImporter.cpp  Normalizer.cpp  Report.cpp  TranscriptParser.cpp  Validator.cpp  VoiceCommandParser.cpp  main.cpp
tests/: test_normalizer.cpp  test_transcript_parser.cpp  test_validator.cpp  test_voice_command_parser.cpp
web/: README_WEB.md  db.py  morfocampo_bridge.py  requirements.txt  server.py  transcriber.py
web/static/: app.js  index.html  privacy.html  style.css
